# MascotRender

./: .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MascotRender_SDD_v0.1.docx  MascotRender_SDD_v0.2.docx  README.md  SECURITY.md  conanfile.py
cmake/: MascotRenderConfig.cmake.in  version.hpp.in
content/: calendar-typography-matrix-v1.json  christmas-new-year-glow-matrix-v1.json  congratulations-typography-matrix-v1.json  education-wise-owl-matrix-v1.json  human-character-selection-v1.json  human-phrase-eligibility-v1.json  micro-reactions-emotion-matrix-v1.json  micro-styled-glb-identities-v1.json  motion-recipes-core-v1.json  phrase-lexicon-core-v1.json  workday-reactions-matrix-v1.json
contracts/: calendar-typography-owner-approval-v1.json  calendar-typography-pack-v1.json  christmas-new-year-glow-owner-approval-v1.json  christmas-new-year-glow-pack-v1.json  congratulations-typography-owner-approval-v1.json  congratulations-typography-pack-v1.json  education-wise-owl-golden-owner-decision-v2.json  education-wise-owl-golden-v2.json  education-wise-owl-pack-v1.json  education-wise-owl-production-owner-approval-v2.json  education-wise-owl-production-v2.json  human-canonical-expansion-wave1.json  human-canonical-expansion-wave2-owner-approval.json  human-canonical-expansion-wave2.json  human-canonical-family-v1.json  human-canonical-production-design-review-v1.json  human-development-matrix-conditional-approval-v2.json  human-development-matrix-gate-status-v3.json  human-development-matrix-gate-status-v4.json  human-development-matrix-gate-status-v5.json  human-development-matrix-gate-status-v6.json  human-development-phrase-matrix-approval-v1.json  human-pack-production-v1.json  human-small-display-occupancy-owner-approval-v1.json  human-small-display-occupancy-v1.json  human-wave2-cross-backend-art-direction-owner-approval-v1.json  human-wave2-owner-production-decision-v1.json  human-wave2-production-activation-v1.json  humanoid-full-body-v1.json  humanoid-production-v2.json  micro-orbit-final-glb-face-parity-owner-approval-v1.json  micro-orbit-styled-glb-proof-owner-conditional-approval-v1.json  micro-reactions-final-pack-owner-approval-v1.json  micro-reactions-final-pack-owner-decision-template-v1.json  micro-reactions-pack-v1.json  micro-reactions-reaction-and-orbit-2_5d-owner-approval-v1.json  micro-reactions-styled-glb-family-owner-approval-v1.json  micro-reactions-styled-glb-family-owner-decision-template-v1.json  micro-reactions-vector-identity-and-reaction-readability-owner-decision-v1.json  workday-reactions-owner-approval-v1.json  (+1 more)
docs/: ARCHITECTURE.md  BENCHMARKS.md  BUNDLE_PROTOCOL.md  CONTENT_PIPELINE.md  DECISIONS.md  HUMAN_MASCOT_SYSTEM.md  HUMAN_PACK_PRODUCTION_RECOVERY.md  HUMAN_PACK_V1_ART_BRIEF.md  HUMAN_PACK_VISUAL_STANDARD.md  M6_REVIEW.md  MANIFESTO.md  MASCOT_PACKAGE_SPEC.md  MICRO_REACTIONS.md  MILESTONES.md  MR102_REVIEW.md  PACK_FORMAT.md  PUBLISHING.md  RELEASE_0.1.0.md  RELEASE_0.2.0.md  RELEASE_0.3.0.md  RELEASE_0.4.0.md  RELEASE_0.5.0.md  RELEASE_0.6.0.md  RELEASE_0.7.0.md  RELEASE_0.8.0.md  RELEASE_0.9.0.md  ROADMAP.md  ROADMAP_3D_ANIMATION.md  STATUS.md  THIRD_PARTY_NOTICES.md  VISION.md  WORKDAY_REACTIONS.md
profiles/: linux-x86_64-clang18-debug  linux-x86_64-clang18-libcxx-release  linux-x86_64-gcc13-debug  linux-x86_64-gcc13-release  macos-armv8-debug  macos-armv8-release  windows-x86_64-msvc194-release
schemas/: bundle-build-report.schema.json  bundle-catalogue.schema.json  bundle-dictionary.schema.json  bundle-pointer.schema.json  bundle-publish-plan.schema.json  bundle-release.schema.json  character-identity.schema.json  human-family-contract.schema.json  human-identity.schema.json  human-pack-standard.schema.json  humanoid-production-rig.schema.json  humanoid-rig.schema.json  mascot-package.schema.json  motion-recipe-library.schema.json  pack.schema.json  phrase-lexicon.schema.json  sticker.schema.json
src/: engine.cpp  version.cpp
test_package/: CMakeLists.txt  conanfile.py
tests/: CMakeLists.txt  test_calendar_typography.py  test_canonical_human_masters.py  test_christmas_new_year_glow.py  test_congratulations_typography.py  test_education_wise_owl_production.py  test_filament_backend.cpp  test_generated_pipeline.py  test_human_display_profiles.py  test_human_pilot_pipeline.py  test_human_wave2_expansion.py  test_micro_orbit_proofs.py  test_micro_reactions.py  test_micro_reactions_bundle.py  test_micro_styled_glb_family.py  test_pack.cpp  test_product_direction.py  test_render.cpp  test_text_layout.cpp  test_timeline.cpp  test_version.cpp  test_workday_reactions.py
tests/fixtures/: camera-framing-sticker.json  layer-cycle-pack.json  layer-cycle-sticker.json  traversal-font-pack.json  traversal-font-sticker.json  traversal-pack.json  traversal-sticker.json  unknown-animation-overlay-sticker.json  unknown-animation-target-sticker.json  unknown-expression-sticker.json  unknown-text-slot-sticker.json  unknown-text-style-sticker.json
tests/fixtures/lod/: pack.json  sticker.json
tests/golden/: README.md
tools/: author_canonical_human_blender.py  build_canonical_human_production_review.py  build_canonical_human_review.py  build_human_display_profiles.py  build_human_library_dev_review.py  build_human_pilot_review.py  build_human_wave2_art_direction_review.py  build_human_wave2_production_review.py  build_human_wave2_review.py  build_mascot_package.py  build_micro_reactions_bundle.py  build_sticker_review.py  build_wahalao_human_dev_bundle.py  build_wahalao_typography_review.py  generate_calendar_typography_pack.py  generate_canonical_human_glbs.py  generate_canonical_human_masters.py  generate_christmas_new_year_glow_pack.py  generate_congratulations_pack.py  generate_education_wise_owl_golden.py  generate_education_wise_owl_pack.py  generate_education_wise_owl_production.py  generate_human_pilots.py  generate_human_wave2_candidates.py  generate_human_wave2_glbs.py  generate_mascot_packs.py  generate_micro_orbit_2_5d_proof.py  generate_micro_orbit_glb.py  generate_robot_glb.py  (+15 more)
(+1291 files in other folders)
